--- a/Section 02/style.css
+++ b/Section 02/style.css
@@ -1,3 +1,8 @@
 section {
     background: #ff1b68;
 }
+
+h1 {
+    color: white;
+    font-family: -apple-system, 'Inter', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
