--- a/Section 02/style.css
+++ b/Section 02/style.css
@@ -1,8 +1,12 @@
-section {
+#product-overview {
     background: #ff1b68;
 }
 
 h1 {
     color: white;
     font-family: -apple-system, 'Inter', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.section-title {
+    color: #2ddf5c;
 }
