--- a/Section 02/style.css
+++ b/Section 02/style.css
@@ -2,11 +2,15 @@
     background: #ff1b68;
 }
 
+.section-title {
+    color: #2ddf5c;
+}
+
 h1 {
     color: white;
     font-family: -apple-system, 'Inter', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.section-title {
-    color: #2ddf5c;
+h1 {
+    font-family: sans-serif;
 }
