--- a/Section 02/style.css
+++ b/Section 02/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 #product-overview {
     background: #ff1b68;
 }
@@ -11,6 +15,6 @@ h1 {
     font-family: -apple-system, 'Inter', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-h1 {
+/* h1 {
     font-family: sans-serif;
-}
+} */
