--- a/Section 02/style.css
+++ b/Section 02/style.css
@@ -10,11 +10,11 @@ body {
     color: #2ddf5c;
 }
 
-h1 {
+#product-overview h1 {
     color: white;
-    font-family: -apple-system, 'Inter', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/* h1 {
-    font-family: sans-serif;
-} */
+h1 {
+    font-family: sans-serif; /* Will not apply */
+}
