--- a/Section 03/style.css
+++ b/Section 03/style.css
@@ -5,12 +5,14 @@ body {
 
 #product-overview {
     background: #ff1b68;
-    padding: 20px;
+    width: 100%;
+    height: 538px;
+    /* padding: 20px; */
     /* border-style: solid;
     border-color: black;
     border-radius: 5px; */
-    border: 5px black solid;
-    margin: 20px;
+    /* border: 5px black solid;
+    margin: 20px; */
 }
 
 .section-title {
