--- a/Section 03/style.css
+++ b/Section 03/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
@@ -6,7 +10,10 @@ body {
 #product-overview {
     background: #ff1b68;
     width: 100%;
-    height: 538px;
+    height: 528px;
+    padding: 10px;
+    border: 5px solid black;
+    margin: 10px;
     /* padding: 20px; */
     /* border-style: solid;
     border-color: black;
