--- a/Section 03/style.css
+++ b/Section 03/style.css
@@ -12,14 +12,6 @@ body {
     width: 100%;
     height: 528px;
     padding: 10px;
-    border: 5px solid black;
-    margin: 10px;
-    /* padding: 20px; */
-    /* border-style: solid;
-    border-color: black;
-    border-radius: 5px; */
-    /* border: 5px black solid;
-    margin: 20px; */
 }
 
 .section-title {
@@ -31,6 +23,13 @@ body {
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-h1 {
-    font-family: sans-serif; /* Will not apply */
+ /* Will not apply */
+/* h1 {
+    font-family: sans-serif;
+} */
+
+.main-header {
+    width: 100%;
+    background: #2ddf5c;
+    padding: 8px 16px;
 }
