--- a/Section 04/main.css
+++ b/Section 04/main.css
@@ -18,6 +18,14 @@ a.active {
     color: #521751
 }
 
+/* a {
+    color: blue;
+} */
+
+a:not(.active) {
+    color: blue;
+}
+
 .main-section {
     height: 800px;
     border: 1px solid #ccc !important;
