--- a/Section 05/style.css
+++ b/Section 05/style.css
@@ -91,6 +91,10 @@ body {
     color: #0e4f1f;
 }
 
+.button:focus {
+    outline: none;
+}
+
  /* Will not apply */
 /* h1 {
     font-family: sans-serif;
