--- a/Section 05/style.css
+++ b/Section 05/style.css
@@ -95,6 +95,17 @@ body {
     outline: none;
 }
 
+#key-features {
+    background: #ff1b68;
+    margin-top: 8px;
+    padding: 16px;
+}
+
+#key-features .section-title {
+    color: white;
+    margin: 32px;
+}
+
  /* Will not apply */
 /* h1 {
     font-family: sans-serif;
