--- a/Section 05/packages/packages.css
+++ b/Section 05/packages/packages.css
@@ -38,12 +38,21 @@ main {
     background: white;
 }
 
+/* Clear float in both sides, left and right */
+.clear-fix {
+    clear: both;
+}
+
 #plus {
     background: rgba(214, 255, 220, 0.95);
 }
 
 #free {
     background: rgba(234, 252, 237, 0.95);
+    float: right;
+    border-right: none;
+    border-left: 4px solid #0e4f1f;
+    text-align: right;
 }
 
 #premium {
