--- a/Section 06/style.css
+++ b/Section 06/style.css
@@ -1,7 +1,7 @@
 
 
 #product-overview {
-    background: url('freedom.jpg');
+    background: url('images/freedom.jpg');
     width: 100%;
     height: 528px;
     padding: 10px;
