--- a/Section 06/packages/packages.css
+++ b/Section 06/packages/packages.css
@@ -6,7 +6,8 @@ main {
     background: url('../images/plans-background.jpg');
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: fixed; /* Take z-index of 0 */
+    z-index: -1;
 }
 
 .package {
