--- a/Section 06/packages/packages.css
+++ b/Section 06/packages/packages.css
@@ -29,10 +29,14 @@ main {
     color: inherit;
     display: block;
     padding: 32px;
+    position: relative;
 }
 
-.package__title {
-
+.package__badge {
+    position: absolute;
+    top: 0;
+    left: 400px;
+    margin: 20px;
 }
 
 .package__subtitle {
