--- a/Section 06/Position Property/main.css
+++ b/Section 06/Position Property/main.css
@@ -28,10 +28,16 @@ body {
     margin: 10px;
 }
 
-.parent .child-1 {
+/* .parent .child-1 {
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
   margin: 0;
+} */
+
+.parent .child-1 {
+  position: relative;
+  top: 300px;
+  right: 50px;
 }
