--- a/Section 06/Position Property/main.css
+++ b/Section 06/Position Property/main.css
@@ -4,6 +4,7 @@ html {
     border: 5px solid white;
     margin: 15px;
     height: 2000px;
+    overflow: hidden;
 }
 
 body {
@@ -11,6 +12,7 @@ body {
     padding: 20px;
     border: 5px solid black;
     margin: 0;
+    overflow: hidden; /* It's passed to the html element */
   }
   
 .parent {
@@ -18,6 +20,8 @@ body {
     padding: 20px;
     border: 5px solid black;
     margin: 0;
+    position: relative;
+    top: 200px;
   }
   
 .parent div {
@@ -36,8 +40,8 @@ body {
   margin: 0;
 } */
 
-.parent .child-1 {
+/* .parent .child-1 {
   position: relative;
-  top: 300px;
+  top: 180px;
   right: 50px;
-}
+} */
