--- a/Section 08/packages/packages.css
+++ b/Section 08/packages/packages.css
@@ -1,5 +1,5 @@
 main {
-    padding-top: 32px;
+    padding-top: 2rem;
 }
 
 .background {
@@ -14,15 +14,15 @@ main {
 
 .package {
     width: 80%;
-    margin: 16px 0;
-    border: 4px solid #0e4f1f;
+    margin: 1rem 0;
+    border: 0.25rem solid #0e4f1f;
     border-left: none;
     position: relative;
 }
 
 .package:hover,
 .package:active {
-    box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    box-shadow: 2px 2px 0.25px rgba(0,0,0,0.5);
     border-color: #ff5454;
     /* border-color: #ff5454 !important; */
 }
@@ -31,18 +31,18 @@ main {
     text-decoration: none;
     color: inherit;
     display: block;
-    padding: 32px;
+    padding: 2rem;
 }
 
 .package__badge {
     position: absolute;
     top: 0;
     right: 0;
-    margin: 20px;
-    font-size: 12px;
+    margin: 0.8rem;
+    font-size: 1.2rem;
     color: white;
     background: #ff5454;
-    padding: 8px;
+    padding: 0.5rem;
 }
 
 .package__subtitle {
@@ -50,9 +50,9 @@ main {
 }
 
 .package__info {
-    padding: 16px;
+    padding: 2rem;
     border: 1px solid #0e4f1f;
-    font-size: 20px;
+    font-size: 0.8rem;
     color: #0e4f1f;
     background: white;
 }
@@ -69,7 +69,7 @@ main {
     background: rgba(234, 252, 237, 0.95);
     float: right;
     border-right: none;
-    border-left: 4px solid #0e4f1f;
+    border-left: 0.25rem solid #0e4f1f;
     text-align: right;
 }
 
