--- a/Section 08/main.css
+++ b/Section 08/main.css
@@ -1,7 +1,7 @@
 
 
 #product-overview {
-    /* background: url("images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box; */
+    background: url("images/freedom.jpg") left 10% bottom 80%/cover no-repeat border-box;
     /* background-image: url("freedom.jpg");
     background-size: cover;
     background-position: left 10% bottom 20%;
@@ -9,9 +9,9 @@
     background-origin: border-box;
     background-clip: border-box; */
     /* background-image: linear-gradient(to left bottom, red, blue); */
-    background-image: radial-gradient(circle at top left, red, blue);
-    width: 100%;
-    height: 528px;
+    /* background-image: radial-gradient(circle at top left, red, blue); */
+    width: 100vw;
+    height: 33vh;
     margin-top: 2.75rem;
     /* border: 5px dashed red; */
     position: relative;
