--- a/Section 11/start-hosting/start-hosting.css
+++ b/Section 11/start-hosting/start-hosting.css
@@ -39,6 +39,7 @@ main {
     font: inherit;
 }
 
+
 .signup-form input:focus,
 .signup-form select:focus {
     outline: none;
@@ -59,6 +60,13 @@ main {
 .signup-form input[type="checkbox"]:checked {
     background: #2ddf5c;
     border: #0e4f1f;
+}
+
+.signup-form input.invalid,
+.signup-form select.invalid,
+.signup :invalid {
+    border-color: red !important;
+    background: #faacac;
 }
 
 .signup-form button [type="submit"] {
