--- a/Section 11/shared.css
+++ b/Section 11/shared.css
@@ -211,6 +211,14 @@ main {
   outline: none;
 }
 
+.button[disabled] {
+  cursor: not-allowed;
+  border-color: #a1a1a1;
+  background: #ccc;
+  color: #a1a1a1;
+
+}
+
 .open {
     display: block !important;
 }
