--- a/Section 12/packages/packages.css
+++ b/Section 12/packages/packages.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: "AnonymousPro";
-    src: url("../AnonymousPro-Regular.ttf");
+    src: url("../AnonymousPro-Regular.ttf") format("truetype");
 }
 
 @font-face {
     font-family: "AnonymousPro";
-    src: url("../AnonymousPro-Bold.ttf");
+    src: url("../AnonymousPro-Bold.ttf") format("truetype");
     font-weight: 700;
 }
 
