--- a/Section 14/grid/main.css
+++ b/Section 14/grid/main.css
@@ -1,10 +1,11 @@
 .container {
     margin: 20px;
     display: grid;
-    height: 500px;
+    height: 800px;
+    width: 500px;
     /* grid-template-columns: 200px 5rem 20% auto; */
-    grid-template-columns: [hd-start] repeat(4, [col-start] 25% [col-end]) [hd-end];
-    grid-template-rows: [hd-start] 5rem [hd-end row-2-start] minmax(10px, 200px) [row-2-end row-3-start] 100px [row-3-end];
+    grid-template-columns: [hd-start] repeat(4, [col-start] 20% [col-end]) [hd-end];
+    grid-template-rows: [hd-start] 5rem [hd-end row-2-start] minmax(10px, 20rem) [row-2-end row-3-start] 100px [row-3-end];
     /* grid-column-gap: 20px;
     grid-row-gap: 10px; */
     grid-gap: 10px 20px;
@@ -13,6 +14,8 @@
                          "footer footer footer footer";
     justify-items: stretch;
     align-items: stretch;
+    justify-content: center;
+    align-content: center;
 }
 
 .el1 {
