--- a/Section 16/main.css
+++ b/Section 16/main.css
@@ -168,7 +168,7 @@
   position: fixed;
   opacity: 0;
   transform: translateY(-3rem);
-  transition: opacity 200ms ease-out, transform 0.5s ease-out;
+  transition: opacity 200ms ease-out, transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
   z-index: 200;
   top: 20%;
   left: 30%;
