--- a/Section 16/shared.css
+++ b/Section 16/shared.css
@@ -178,7 +178,7 @@ main {
 }
 
 .mobile-nav {
-  display: none;
+  transform: translateX(-100px);
   position: fixed;
   z-index: 101;
   top: 0;
@@ -186,6 +186,7 @@ main {
   background: white;
   width: 80%;
   height: 100vh;
+  transition: transform 300ms ease-out;
 }
 
 .mobile-nav__items {
