--- a/Section 16/shared.css
+++ b/Section 16/shared.css
@@ -120,7 +120,7 @@ main {
 }
 
 .main-nav__item--cta {
-  animation: wiggle 200ms 3s 8 none;
+  animation: wiggle 400ms 3s 8 ease-out none;
 }
 
 .main-nav__item--cta a,
@@ -260,11 +260,16 @@ main {
 
 
 @keyframes wiggle {
-  from {
-    transform: rotateZ(-10deg);
+  0% {
+    transform: rotateZ(0deg);
     
   }
-  to {
+    
+  50% {
+    transform: rotateZ(-10deg);
+  }
+
+  100% {
     transform: rotateZ(10deg);
   }
 }
