--- a/Section 18/main.scss
+++ b/Section 18/main.scss
@@ -1,4 +1,6 @@
-$main-color: #521751;
+// $main-color: #521751;
+$colors: (main: #521751, secondary: #fa923f);
+$border-default: 0.05rem solid map-get($colors, main);
 
 @import "typography.css";
 html {
@@ -25,7 +27,7 @@ body {
 }
 
 .sass-introduction {
-  border: 0.05rem solid $main-color;
+  border: $border-default;
   background: #fae5ff;
   padding: 2rem;
   text-align: center;
@@ -39,7 +41,7 @@ body {
 }
 
 .sass-details {
-  border: 0.05rem solid $main-color;
+  border: 0.05rem solid map-get($colors, main);
   background: #fae5ff;
   padding: 1rem;
   text-align: center;
@@ -49,7 +51,7 @@ body {
 }
 
 .section-header {
-  border-bottom: 0.05rem solid $main-color;
+  border-bottom: 0.05rem solid map-get($colors, main);
 }
 
 .section-header h1 {
@@ -73,10 +75,10 @@ body {
 
   .documentation-link {
     text-decoration: none;
-    color: $main-color;
+    color: map-get($colors, main);
     display: block;
     padding: 0.2rem;
-    border: 0.05rem solid $main-color;
+    border: $border-default;
   }
   
   .documentation-link:hover,
