--- a/Section 18/main.scss
+++ b/Section 18/main.scss
@@ -27,17 +27,22 @@ body {
   box-sizing: border-box;
 }
 
-.sass-introduction {
+.sass-section {
   border: $border-default;
   background: lighten(map-get($colors, main), 72%);
   padding: $size-default*2;
   text-align: center;
-  box-shadow: $size-tiny $size-tiny 0.1rem #ccc;
   width: 90%;
   box-sizing: border-box;
   @media (min-width: 40rem) {
       width: 30rem;
   }
+
+}
+
+.sass-introduction {
+  @extend .sass-section;
+  box-shadow: $size-tiny $size-tiny 0.1rem #ccc;
 }
 
 .sass-introduction p {
@@ -45,17 +50,8 @@ body {
 }
 
 .sass-details {
-  border: 0.05rem solid map-get($colors, main);
-  background: lighten(map-get($colors, main), 72%);
-  padding: $size-default;
-  text-align: center;
+  @extend .sass-section;
   margin: $size-default*2 0;
-  width: 90%;
-  box-sizing: border-box;
-  @media (min-width: 40rem) {
-      width: 30rem;
-  }
-  
 }
 
 .section-header {
