--- a/Section 18/main.scss
+++ b/Section 18/main.scss
@@ -53,10 +53,9 @@ body {
 .sass-introduction {
   @extend .sass-section;
   box-shadow: $size-tiny $size-tiny 0.1rem #ccc;
-}
-
-.sass-introduction p {
-  margin: 0;
+  p {
+    margin: 0;
+  }
 }
 
 .sass-details {
@@ -66,10 +65,10 @@ body {
 
 .section-header {
   border-bottom: 0.05rem solid map-get($colors, main);
-}
-
-.section-header h1 {
-  margin: 0 0 $size-default 0;
+  
+  h1 {
+    margin: 0 0 $size-default 0;
+  }
 }
 
 .documentation-links {
@@ -90,12 +89,12 @@ body {
     display: block;
     padding: $size-tiny;
     border: $border-default;
+    &:hover,
+    &:active {
+      color: white;
+      background: map-get($colors, secondary);
+      border-color: map-get($colors, secondary);
+    }
   }
   
-  .documentation-link:hover,
-  .documentation-link:active {
-    color: white;
-    background: map-get($colors, secondary);
-    border-color: map-get($colors, secondary);
-  }
 }
